tests/ui/keyword/keyword-super.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/keyword-super.rs:2:9
   |
LL |     let super: isize;
   |         ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
