tests/ui/keyword/keyword-super.rs
fn main() {
    let super: isize; //~ ERROR: cannot find
    //~^ NOTE: there are too many leading `super` keywords
}
